<resources>
    <string name="app_name">M07_UF1_P1.8</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">GENSHIN FORM</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="required_field">required field</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="must">Must be at least 8 char</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surnames">Surnames</string>
    <string name="birth_date">Birth date</string>
    <string name="gender_pronoun">Gender pronoun</string>
    <string name="accept_terms">Accept Terms and conditions</string>
    <string name="created">Account created</string>
    <string name="welcome_to_the_app">Welcome to the app</string>
</resources>