<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegisterScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:scaleX="2.3"
            android:scaleY="2.3"
            android:src="@drawable/genshin_impact_wallpaper" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:text="@string/register"
                android:textColor="#000"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/RegisterUserName"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/repeat_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerRepeatPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerName"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/surnames">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerSurname"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/birth_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerbirth"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/gender_pronoun"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/registerGender"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkboxTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/accept_terms"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButtonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/register"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textColor="#000"
                android:id="@+id/registerButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/login"/>


        </LinearLayout>

    </RelativeLayout>



</ScrollView>